--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -21,3 +21,10 @@ password=123456
 [StatusServer]
 host=localhost
 port=50052
+
+[ChatServer1]
+Host = 127.0.0.1
+Port = 8090
+[ChatServer2]
+Host = 127.0.0.1
+Port = 8091
