--- a/GateServer/config.ini
+++ b/GateServer/config.ini
@@ -20,4 +20,16 @@ password=123456
 
 [StatusServer]
 host=localhost
-port=50052
+port=50053
+
+[ChatServer]
+number=2
+
+[ChatServer1]
+name = ChatServer1
+host = 127.0.0.1
+port = 8090
+[ChatServer2]
+name = ChatServer2
+host = 127.0.0.1
+port = 8091
