--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -20,11 +20,16 @@ password=123456
 
 [StatusServer]
 host=localhost
-port=50052
+port=50053
+
+[ChatServer]
+number=2
 
 [ChatServer1]
-Host = 127.0.0.1
-Port = 8090
+name = ChatServer1
+host = 127.0.0.1
+port = 8090
 [ChatServer2]
-Host = 127.0.0.1
-Port = 8091
+name = ChatServer2
+host = 127.0.0.1
+port = 8091
